--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1,56 +1,19 @@
-- name: Kevin Lewis
-  role: President
+- name: Alex Bucknall
+  role: Python
   photo: kevin
-  email: klewi014@gold.ac.uk
-- name: Anni Chen
-  role: Treasurer
-  photo: anni
-  email: achen002@gold.ac.uk
-- name: Nathaniel Okenwa
-  role: Secretary
-  photo: nathaniel
-  email: noken003@gold.ac.uk
-- name: Isabella Maund
-  role: Diversity & Inclusion
-  photo: isabella
-  email: imaun001@gold.ac.uk
-- name: Jade Hall-Smith
-  role: Accessibility
-  photo: jade
-  email: jhall020@gold.ac.uk
-- name: Alice Casey
-  photo: alice
-  email: acase002@gold.ac.uk
-- name: Ben Henshaw
-  photo: ben
-  email: bhens001@gold.ac.uk
-- name: Beth Loft
-  photo: beth
-  email: bloft015@gold.ac.uk
-- name: Bevis Halsey-Perry
-  photo: bevis
-  email: bhals001@gold.ac.uk
-- name: Charlie Ringer
-  photo: charlie
-  email: cring002@gold.ac.uk
-- name: Edwin Burns
-  photo: edwin
-  email: eburn050@gold.ac.uk
-- name: Elena Martina
-  photo: elena
-  email: emart015@gold.ac.uk
-- name: Harley Wright
-  photo: harley
-  email: hwrig002@gold.ac.uk
-- name: Ilya Phillips
-  photo: ilya
-  email: iphil011@gold.ac.uk
-- name: Laila Majeed
-  photo: laila
-  email: lmaje002@gold.ac.uk
-- name: Terry Clark
-  photo: terry
-  email: tclar052@gold.ac.uk
-- name: Wilson Tolentino da Silva
-  photo: wilson
-  email: wbola001@gold.ac.uk
+  email: alex@warwick.tech
+
+- name: Eavan 
+  role: Python
+  photo: kevin
+  email: eavan@warwick.tech
+
+- name: Aaron
+  role: Web Dev
+  photo: kevin
+  email: aaron@warwick.tech
+
+- name: Tom Pearson
+  role: Admin
+  photo: kevin
+  email: tom@warwick.tech
